# streamsys

./: .gitignore  Cargo.toml  LICENSE  database.sql
client/: .editorconfig  .env  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/api/: api.ts  auth.ts  displayOutput.ts  displayState.ts  slideType.ts  users.ts
client/src/components/users/: UserEdit.vue  UserList.vue
client/src/helpers/: clone.ts  option.ts  random.ts  sort.ts
client/src/router/: index.ts
client/src/stores/: auth.ts  displayState.ts  state.ts
client/src/views/: AboutView.vue  AccountView.vue  DisplayView.vue  LoginView.vue  LogoutView.vue
src/: app.rs  main.rs
src/api/: auth.rs  display_state.rs  mod.rs  server_info.rs  users.rs
src/auth/: api.rs  db.rs  extractor.rs  mod.rs  service.rs
src/config/: file.rs  mod.rs
src/content/: db.rs
src/database/: display_outputs.rs  mod.rs  slide_content.rs  slide_deck_sections.rs  slide_deck_slides.rs  slide_decks.rs  slide_groups.rs  slide_types.rs  slides.rs
src/database/migrations/: mod.rs
src/display_state/: api.rs  service.rs
src/helpers/: auth_extractor.rs  errors.rs  mod.rs
src/services/: audit.rs  auth.rs  config.rs  display_state.rs  mod.rs  users.rs
src/state/: api.rs  mod.rs  models.rs  service.rs
src/tasks/: maintenance.rs
src/users/: api.rs  db.rs  service.rs
