[package]
name = "garnetdg_streamsys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5" }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.27" }
futures = { version = "0.3" }
r2d2 = { version = "0.8" }
r2d2_sqlite = { version = "0.24" }
rand = { version = "0.8" }
ratatui = { version = "0.26" }
rusqlite = { version = "0.31", features = ["bundled", "functions", "backup", "vtab", "array", "csvtab", "i128_blob", "serialize", "chrono", "serde_json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }

[profile.release]
codegen-units = 1
lto = "fat"
